--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <td>
           <h1>Aiden Huang</h1>
           <p>
-            Accounting -> Finance -> Quant ->
-            <strong>📍Front-end Developer</strong> -> ?
+            Accounting -> Finance -> Quant -> ?
           </p>
         </td>
       </tr>
